@@ -44,7 +44,7 @@ public:
 	const EpgEventList	get_list();
 	void				prune();
 	void				load(Data::Connection& connection, guint channel_id);
-	void				save(Data::Connection& connection, guint channel_id, EpgEvents& epg_events);
+	void				save(Data::Connection& connection, guint channel_id);
 };
 
 #endif
